# ice-cream-dataops

./: .gitignore  pyproject.toml
ice-cream-dataops/: build_info.test.yaml
ice-cream-dataops/function_local_venvs/icapi_assets_extractor/: run_check.py
ice-cream-dataops/modules/bootcamp/data_foundation/auth/: data_developer.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/auth/: icapi_extractors.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/data_sets/: data_sets.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: create_asset_hierarchy.schedule.yaml  create_asset_hierarchy.yaml  icapi_assets_ts_contextualization.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml  wf_icapi_data_pipeline.WorkFlowTrigger.yaml  wf_icapi_data_pipeline.WorkflowVersion.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/auth/: data_pipeline_oee.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/data_sets/: data_sets.yaml
