[tool.poetry]
name = "cdf-bootcamp"
version = "0.1.0"
description = "cdf bootcamp"
authors = ["Jhoel Perez <jhoel.perez@cntxt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
cognite-toolkit = "0.3.0b4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
